--- a/DL_Lab3_Example_Code_logistic_regresstion.ipynb
+++ b/DL_Lab3_Example_Code_logistic_regresstion.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/KIM-KWAN-IL/Test/blob/main/DL_Lab3_Example_Code_logistic_regresstion.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -21,7 +21,64 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RG-h_aVcL1Dv",
+        "outputId": "96498ae8-3d5c-436e-de61-498ef9cd77f9"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "x_train size = torch.Size([8, 2])\n",
+            "y_train size = torch.Size([8, 1])\n",
+            "------------------------------\n",
+            "< Before Train >\n",
+            "W size = tensor([[0.],\n",
+            "        [0.]], requires_grad=True)\n",
+            "b size = tensor([0.], requires_grad=True)\n",
+            "epoch:0 cost:0.693147\n",
+            "epoch:100 cost:0.618535\n",
+            "epoch:200 cost:0.617527\n",
+            "epoch:300 cost:0.616542\n",
+            "epoch:400 cost:0.615580\n",
+            "epoch:500 cost:0.614641\n",
+            "epoch:600 cost:0.613723\n",
+            "epoch:700 cost:0.612827\n",
+            "epoch:800 cost:0.611952\n",
+            "epoch:900 cost:0.611097\n",
+            "------------------------------\n",
+            "< After Train >\n",
+            "W =  tensor([[-0.0079],\n",
+            "        [ 0.0063]], requires_grad=True)\n",
+            "b = tensor([-0.0006], requires_grad=True)\n",
+            "------------------------------\n",
+            "< Evaluation >\n",
+            "tensor([[0.6800],\n",
+            "        [0.6127],\n",
+            "        [0.6554],\n",
+            "        [0.7703],\n",
+            "        [0.7337],\n",
+            "        [0.6609],\n",
+            "        [0.6678],\n",
+            "        [0.6900]], grad_fn=<MulBackward0>)\n",
+            "tensor([[False],\n",
+            "        [False],\n",
+            "        [False],\n",
+            "        [False],\n",
+            "        [False],\n",
+            "        [False],\n",
+            "        [False],\n",
+            "        [False]])\n"
+          ]
+        }
+      ],
       "source": [
+        "#example1\n",
         "import matplotlib.pyplot as plt\n",
         "import torch\n",
         "import torch.nn as nn\n",
@@ -76,75 +133,57 @@
         "print('< Evaluation >')\n",
         "print(prediction)\n",
         "print(correct_prediction)"
-      ],
-      "metadata": {
-        "id": "RG-h_aVcL1Dv",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "96498ae8-3d5c-436e-de61-498ef9cd77f9"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "x_train size = torch.Size([8, 2])\n",
-            "y_train size = torch.Size([8, 1])\n",
-            "------------------------------\n",
-            "< Before Train >\n",
-            "W size = tensor([[0.],\n",
-            "        [0.]], requires_grad=True)\n",
-            "b size = tensor([0.], requires_grad=True)\n",
-            "epoch:0 cost:0.693147\n",
-            "epoch:100 cost:0.618535\n",
-            "epoch:200 cost:0.617527\n",
-            "epoch:300 cost:0.616542\n",
-            "epoch:400 cost:0.615580\n",
-            "epoch:500 cost:0.614641\n",
-            "epoch:600 cost:0.613723\n",
-            "epoch:700 cost:0.612827\n",
-            "epoch:800 cost:0.611952\n",
-            "epoch:900 cost:0.611097\n",
-            "------------------------------\n",
-            "< After Train >\n",
-            "W =  tensor([[-0.0079],\n",
-            "        [ 0.0063]], requires_grad=True)\n",
-            "b = tensor([-0.0006], requires_grad=True)\n",
-            "------------------------------\n",
-            "< Evaluation >\n",
-            "tensor([[0.6800],\n",
-            "        [0.6127],\n",
-            "        [0.6554],\n",
-            "        [0.7703],\n",
-            "        [0.7337],\n",
-            "        [0.6609],\n",
-            "        [0.6678],\n",
-            "        [0.6900]], grad_fn=<MulBackward0>)\n",
-            "tensor([[False],\n",
-            "        [False],\n",
-            "        [False],\n",
-            "        [False],\n",
-            "        [False],\n",
-            "        [False],\n",
-            "        [False],\n",
-            "        [False]])\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Example 1 with Higher Implementation"
-      ],
       "metadata": {
         "id": "mQLybI-PhKxu"
-      }
+      },
+      "source": [
+        "# Example 1 with Higher Implementation"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-ykegEGZiKL2",
+        "outputId": "09aea6cd-8010-4fc6-e4da-e9c7035fc657"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "x_train size = torch.Size([8, 2])\n",
+            "y_train size = torch.Size([8, 1])\n",
+            "epoch:0 cost:3.497896\n",
+            "epoch:100 cost:1.171866\n",
+            "epoch:200 cost:0.711561\n",
+            "epoch:300 cost:0.689296\n",
+            "epoch:400 cost:0.687891\n",
+            "epoch:500 cost:0.687617\n",
+            "epoch:600 cost:0.687413\n",
+            "epoch:700 cost:0.687214\n",
+            "epoch:800 cost:0.687016\n",
+            "epoch:900 cost:0.686818\n",
+            "------------------------------\n",
+            "< Evaluation >\n",
+            "tensor([[True],\n",
+            "        [True],\n",
+            "        [True],\n",
+            "        [True],\n",
+            "        [True],\n",
+            "        [True],\n",
+            "        [True],\n",
+            "        [True]])\n"
+          ]
+        }
+      ],
       "source": [
         "import matplotlib.pyplot as plt\n",
         "import torch\n",
@@ -192,37 +231,56 @@
         "print('------------------------------')\n",
         "print('< Evaluation >')\n",
         "print(prediction)\n"
-      ],
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0Jx_LZ1qxXoZ"
+      },
+      "source": [
+        "# Binary Classification Example"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "-ykegEGZiKL2",
-        "outputId": "09aea6cd-8010-4fc6-e4da-e9c7035fc657"
+        "id": "LWbyvNaKxd3n",
+        "outputId": "9e6f97e5-5f86-4d5b-f62c-65012719461c"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "x_train size = torch.Size([8, 2])\n",
-            "y_train size = torch.Size([8, 1])\n",
-            "epoch:0 cost:3.497896\n",
-            "epoch:100 cost:1.171866\n",
-            "epoch:200 cost:0.711561\n",
-            "epoch:300 cost:0.689296\n",
-            "epoch:400 cost:0.687891\n",
-            "epoch:500 cost:0.687617\n",
-            "epoch:600 cost:0.687413\n",
-            "epoch:700 cost:0.687214\n",
-            "epoch:800 cost:0.687016\n",
-            "epoch:900 cost:0.686818\n",
-            "------------------------------\n",
-            "< Evaluation >\n",
+            "Epoch    0 / 1000 Cost: 0.693147\n",
+            "Epoch  100 / 1000 Cost: 0.134722\n",
+            "Epoch  200 / 1000 Cost: 0.080643\n",
+            "Epoch  300 / 1000 Cost: 0.057900\n",
+            "Epoch  400 / 1000 Cost: 0.045300\n",
+            "Epoch  500 / 1000 Cost: 0.037261\n",
+            "Epoch  600 / 1000 Cost: 0.031672\n",
+            "Epoch  700 / 1000 Cost: 0.027556\n",
+            "Epoch  800 / 1000 Cost: 0.024394\n",
+            "Epoch  900 / 1000 Cost: 0.021888\n",
+            "Epoch 1000 / 1000 Cost: 0.019852\n",
+            "tensor([[2.7648e-04],\n",
+            "        [3.1608e-02],\n",
+            "        [3.8977e-02],\n",
+            "        [9.5622e-01],\n",
+            "        [9.9823e-01],\n",
+            "        [9.9969e-01]], grad_fn=<SigmoidBackward0>)\n",
+            "tensor([[False],\n",
+            "        [False],\n",
+            "        [False],\n",
+            "        [ True],\n",
+            "        [ True],\n",
+            "        [ True]])\n",
             "tensor([[True],\n",
-            "        [True],\n",
-            "        [True],\n",
             "        [True],\n",
             "        [True],\n",
             "        [True],\n",
@@ -230,19 +288,7 @@
             "        [True]])\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Binary Classification Example"
       ],
-      "metadata": {
-        "id": "0Jx_LZ1qxXoZ"
-      }
-    },
-    {
-      "cell_type": "code",
       "source": [
         "import numpy as np\n",
         "import torch\n",
@@ -286,51 +332,6 @@
         "print(hypothesis)\n",
         "print(prediction)\n",
         "print(correct_prediction)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "LWbyvNaKxd3n",
-        "outputId": "9e6f97e5-5f86-4d5b-f62c-65012719461c"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch    0 / 1000 Cost: 0.693147\n",
-            "Epoch  100 / 1000 Cost: 0.134722\n",
-            "Epoch  200 / 1000 Cost: 0.080643\n",
-            "Epoch  300 / 1000 Cost: 0.057900\n",
-            "Epoch  400 / 1000 Cost: 0.045300\n",
-            "Epoch  500 / 1000 Cost: 0.037261\n",
-            "Epoch  600 / 1000 Cost: 0.031672\n",
-            "Epoch  700 / 1000 Cost: 0.027556\n",
-            "Epoch  800 / 1000 Cost: 0.024394\n",
-            "Epoch  900 / 1000 Cost: 0.021888\n",
-            "Epoch 1000 / 1000 Cost: 0.019852\n",
-            "tensor([[2.7648e-04],\n",
-            "        [3.1608e-02],\n",
-            "        [3.8977e-02],\n",
-            "        [9.5622e-01],\n",
-            "        [9.9823e-01],\n",
-            "        [9.9969e-01]], grad_fn=<SigmoidBackward0>)\n",
-            "tensor([[False],\n",
-            "        [False],\n",
-            "        [False],\n",
-            "        [ True],\n",
-            "        [ True],\n",
-            "        [ True]])\n",
-            "tensor([[True],\n",
-            "        [True],\n",
-            "        [True],\n",
-            "        [True],\n",
-            "        [True],\n",
-            "        [True]])\n"
-          ]
-        }
       ]
     },
     {
@@ -354,8 +355,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "x_train size = torch.Size([8, 3])\n",
             "y_train size = torch.Size([8])\n",
@@ -449,15 +450,62 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Possible Solution 1"
-      ],
       "metadata": {
         "id": "ia3Zn2YKQHFT"
-      }
+      },
+      "source": [
+        "# Possible Solution 1"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7VPaLbTmQIvu",
+        "outputId": "81469608-bfa8-4a47-a090-d663736fd612"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "x_train size = torch.Size([8, 3])\n",
+            "y_train size = torch.Size([8, 4])\n",
+            "W size = torch.Size([3, 4])\n",
+            "b size = torch.Size([4])\n",
+            "epoch:0 cost:1.386294\n",
+            "epoch:1000 cost:1.294630\n",
+            "epoch:2000 cost:1.293651\n",
+            "epoch:3000 cost:1.292665\n",
+            "epoch:4000 cost:1.291668\n",
+            "epoch:5000 cost:1.290663\n",
+            "epoch:6000 cost:1.289652\n",
+            "epoch:7000 cost:1.288638\n",
+            "epoch:8000 cost:1.287622\n",
+            "epoch:9000 cost:1.286609\n",
+            "< After Train >\n",
+            "W =  tensor([[-3.5448e-03, -3.0706e-04,  1.8038e-05,  3.2536e-03],\n",
+            "        [ 1.6219e-03, -8.2642e-03,  7.1303e-05,  2.2952e-03],\n",
+            "        [ 1.5829e-04,  4.0599e-04,  1.6471e-03, -4.1040e-04]],\n",
+            "       requires_grad=True)\n",
+            "b = tensor([-1.1345e-04, -3.9175e-05,  2.5380e-07,  5.9185e-05],\n",
+            "       requires_grad=True)\n",
+            "---------\n",
+            "< Evaluation >\n",
+            "tensor([[0.7447, 0.6715, 1.0000, 0.1394],\n",
+            "        [0.6720, 0.6044, 0.9994, 0.2280],\n",
+            "        [0.7726, 0.7830, 1.0000, 0.0898],\n",
+            "        [0.8278, 0.7095, 1.0000, 0.0706],\n",
+            "        [0.8167, 0.7665, 1.0000, 0.0679],\n",
+            "        [0.7590, 0.7631, 1.0000, 0.1056],\n",
+            "        [0.7010, 0.5671, 0.9997, 0.2120],\n",
+            "        [0.7681, 0.6957, 1.0000, 0.1128]], grad_fn=<SigmoidBackward0>)\n"
+          ]
+        }
+      ],
       "source": [
         "import matplotlib.pyplot as plt\n",
         "import torch\n",
@@ -533,61 +581,15 @@
         "print('---------')\n",
         "print('< Evaluation >')\n",
         "print(prediction)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7VPaLbTmQIvu",
-        "outputId": "81469608-bfa8-4a47-a090-d663736fd612"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "x_train size = torch.Size([8, 3])\n",
-            "y_train size = torch.Size([8, 4])\n",
-            "W size = torch.Size([3, 4])\n",
-            "b size = torch.Size([4])\n",
-            "epoch:0 cost:1.386294\n",
-            "epoch:1000 cost:1.294630\n",
-            "epoch:2000 cost:1.293651\n",
-            "epoch:3000 cost:1.292665\n",
-            "epoch:4000 cost:1.291668\n",
-            "epoch:5000 cost:1.290663\n",
-            "epoch:6000 cost:1.289652\n",
-            "epoch:7000 cost:1.288638\n",
-            "epoch:8000 cost:1.287622\n",
-            "epoch:9000 cost:1.286609\n",
-            "< After Train >\n",
-            "W =  tensor([[-3.5448e-03, -3.0706e-04,  1.8038e-05,  3.2536e-03],\n",
-            "        [ 1.6219e-03, -8.2642e-03,  7.1303e-05,  2.2952e-03],\n",
-            "        [ 1.5829e-04,  4.0599e-04,  1.6471e-03, -4.1040e-04]],\n",
-            "       requires_grad=True)\n",
-            "b = tensor([-1.1345e-04, -3.9175e-05,  2.5380e-07,  5.9185e-05],\n",
-            "       requires_grad=True)\n",
-            "---------\n",
-            "< Evaluation >\n",
-            "tensor([[0.7447, 0.6715, 1.0000, 0.1394],\n",
-            "        [0.6720, 0.6044, 0.9994, 0.2280],\n",
-            "        [0.7726, 0.7830, 1.0000, 0.0898],\n",
-            "        [0.8278, 0.7095, 1.0000, 0.0706],\n",
-            "        [0.8167, 0.7665, 1.0000, 0.0679],\n",
-            "        [0.7590, 0.7631, 1.0000, 0.1056],\n",
-            "        [0.7010, 0.5671, 0.9997, 0.2120],\n",
-            "        [0.7681, 0.6957, 1.0000, 0.1128]], grad_fn=<SigmoidBackward0>)\n"
-          ]
-        }
       ]
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
-      "provenance": [],
       "gpuType": "T4",
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -595,8 +597,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
